--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,12 @@
 body{
     font-family: Verdana, Tahoma, sans-serif;
-    width: 90%;
-    margin: 0 auto 0 auto;
+    background-color: hsl(1, 0%, 90%);
 }
 
 .title {
     text-align: center;
-    color: rgb(2, 30, 39);
-    background-color: rgb(230, 248, 147);
+    color: hsl(0, 0%, 10%);
+    background-color: hsl(60, 41%, 77%);
     font-weight: bold;
     font-size: 48px;
 }
@@ -32,9 +31,9 @@ ul.recipe-list {
     max-width: 900px;
 }
 
-h2, h3 {
+h2, h3, p, ul, ol {
     text-align: left;
-    color: rgb(75, 75, 75);
+    color: hsl(0, 0%, 20%);
 }
 
 h2 {
